--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Progetti PHP</title>
     <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   </head>
   <body>
         <h1>Progetti</h1><br>
@@ -13,5 +14,6 @@
         <h3><a href="fattoriale.php">Fattoriale</a></h3>
         <h3><a href="cambiobase.php">Cambiobase</a></h3>
         <h3><a href="crud.php">Crud</a></h3>
+        <h3><a href="ristorante/index.php">Ristorante</a></h3>
   </body>
 </html>
